# solvespace

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
extlib/libdxfrw/: CMakeLists.txt
src/: CMakeLists.txt  bsp.cpp  clipboard.cpp  confscreen.cpp  constraint.cpp  constrainteq.cpp  describescreen.cpp  draw.cpp  drawconstraint.cpp  drawentity.cpp  dsc.h  entity.cpp  export.cpp  exportstep.cpp  exportvector.cpp  expr.cpp  expr.h  file.cpp  generate.cpp  glhelper.cpp  graphicswin.cpp  group.cpp  groupmesh.cpp  lib.cpp  mesh.cpp  modify.cpp  mouse.cpp  polygon.cpp  polygon.h  request.cpp  sketch.h  solvespace.cpp  solvespace.h  style.cpp  system.cpp  textscreens.cpp  textwin.cpp  ttf.cpp  ui.h  undoredo.cpp  (+2 more)
src/cocoa/: cocoamain.mm
src/gtk/: gtkmain.cpp
src/srf/: boolean.cpp  curve.cpp  merge.cpp  ratpoly.cpp  raycast.cpp  surface.cpp  surface.h  surfinter.cpp  triangulate.cpp
src/win32/: w32main.cpp
tools/: CMakeLists.txt  png2c.cpp  unifont2c.cpp
